<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_resultados">

    <ViewAnimator
        android:id="@+id/viewAnimator"
        android:layout_width="417dp"
        android:layout_height="619dp"
        android:layout_marginBottom="111dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/siguiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/siguiente"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/salir"
        app:layout_constraintTop_toBottomOf="@+id/viewAnimator"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/anterior"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regresar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/salir"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewAnimator"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/salir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/siguiente"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/anterior"
        app:layout_constraintTop_toBottomOf="@+id/viewAnimator"
        app:layout_constraintVertical_bias="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>