<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_subir_archivo">


    <ViewAnimator
        android:id="@+id/switcher"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/subir1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="295dp"
                android:layout_height="105dp"
                android:layout_marginTop="312dp"
                android:gravity="center"
                android:text="@string/subir_archivo2"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="208dp"
                android:gravity="center"
                android:text="@string/subir_archivo1"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/sig1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="160dp"
                android:layout_marginLeft="160dp"
                android:layout_marginEnd="160dp"
                android:layout_marginRight="160dp"
                android:layout_marginBottom="156dp"
                android:onClick="subir"
                android:text="@string/siguiente"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.529"
                app:layout_constraintStart_toStartOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/subir2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="37dp"
                android:layout_marginLeft="37dp"
                android:layout_marginTop="152dp"
                android:layout_marginEnd="37dp"
                android:layout_marginRight="37dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/horario" />

            <Button
                android:id="@+id/sig2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="170dp"
                android:layout_marginLeft="170dp"
                android:layout_marginEnd="151dp"
                android:layout_marginRight="151dp"
                android:layout_marginBottom="108dp"
                android:text="@string/importar_horario"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.656"
                app:layout_constraintStart_toStartOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/previsualizar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/renderizar"
                android:layout_width="350dp"
                android:layout_height="350dp"
                android:layout_marginStart="37dp"
                android:layout_marginTop="148dp"
                android:layout_marginEnd="37dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/sig3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/siguiente"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/regresar"
                app:layout_constraintTop_toBottomOf="@+id/renderizar"
                app:layout_constraintVertical_bias="0.5" />

            <Button
                android:id="@+id/regresar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/regresar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/sig3"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/renderizar"
                app:layout_constraintVertical_bias="0.5" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/analisis"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/analizando"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/blue"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toTopOf="@+id/barraProg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />

            <ProgressBar
                android:id="@+id/barraProg"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="363dp"
                android:layout_height="44dp"
                android:scaleY="2"
                app:layout_constraintBottom_toTopOf="@+id/imageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6"
                app:layout_constraintVertical_bias="0.5" />

            <pl.droidsonroids.gif.GifImageView
                android:id="@+id/imageView"
                android:layout_width="321dp"
                android:layout_height="408dp"
                android:src="@drawable/reloj"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/barraProg"
                app:layout_constraintVertical_bias="0.5"
                tools:layout_conversion_absoluteHeight="365dp"
                tools:layout_conversion_absoluteWidth="0dp" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/pagfinal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/textView10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5"
                app:srcCompat="@drawable/check" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/analisis1"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/blue"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/textView7"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView4"
                app:layout_constraintVertical_bias="0.5" />

            <ImageButton
                android:id="@+id/sig4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/siguiente"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                app:layout_constraintVertical_bias="0.5"
                app:srcCompat="@drawable/button" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/analisis2"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="@color/blue"
                app:layout_constraintBottom_toTopOf="@+id/sig4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView10"
                app:layout_constraintVertical_bias="0.5" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </ViewAnimator>

</androidx.constraintlayout.widget.ConstraintLayout>