<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_quienes_somos">

    <ViewSwitcher
        android:id="@+id/switcher"
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:inAnimation="@android:anim/slide_in_left"
        android:outAnimation="@android:anim/slide_out_right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/quienes1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <Button
                android:id="@+id/siguiente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/siguiente"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintVertical_bias="0.254"
                tools:layout_conversion_absoluteHeight="56dp"
                tools:layout_conversion_absoluteWidth="89dp" />

            <pl.droidsonroids.gif.GifImageView
                android:id="@+id/imageView"
                android:layout_width="321dp"
                android:layout_height="408dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/quienes_somos"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.489"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_conversion_absoluteHeight="365dp"
                tools:layout_conversion_absoluteWidth="0dp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:gravity="center"
                android:text="@string/bienvenida1"
                android:textAllCaps="false"
                android:textSize="28sp"
                android:textStyle="bold"
                android:typeface="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                tools:layout_conversion_absoluteHeight="124dp"
                tools:layout_conversion_absoluteWidth="356dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/quienes2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2">


            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/bienvenida2"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/textView3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5"
                tools:layout_conversion_absoluteHeight="0dp"
                tools:layout_conversion_absoluteWidth="0dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/bienvenida3"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/empezar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:layout_constraintVertical_bias="0.5"
                tools:layout_conversion_absoluteHeight="0dp"
                tools:layout_conversion_absoluteWidth="0dp" />

            <Button
                android:id="@+id/empezar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/siguiente"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                app:layout_constraintVertical_bias="0.5"
                tools:layout_conversion_absoluteHeight="0dp"
                tools:layout_conversion_absoluteWidth="0dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ViewSwitcher>
</androidx.constraintlayout.widget.ConstraintLayout>